correctly align desktop icons, reduce option button's width

--- a/newTab.css
+++ b/newTab.css
@@ -137,7 +137,7 @@ a {
 	margin: 15px;
 	border-radius: 5px;
 	height: 16px;
-	vertical-align: top;
+	vertical-align: middle;
 }
 .desktopFolder:hover {
 	box-shadow: 0 0 0 5px var(--hi);
@@ -146,20 +146,20 @@ a {
 	box-shadow: 0 0 0 5px var(--hi-click);
 }
 .window main .desktopFolder {
-    overflow: hidden;
+	overflow: hidden;
 	height: 40px;
 }
 
 .desktopLink {
-    display: inline-block;
+	display: inline-block;
 	text-decoration: none;
 	padding: 15px;
 	border-radius: 5px;
 }
 .desktopLink img {
 	margin-right: 4px;
-	vertical-align: middle;
-	image-rendering: optimizespeed;
+	vertical-align: bottom;
+	image-rendering: optimizeSpeed;
 }
 .desktopLink:hover {
 	background: var(--hi);
@@ -180,7 +180,7 @@ a {
 .window main .desktopLink img {
 	display: block;
 	margin: auto;
-    image-rendering: optimizeSpeed;
+	image-rendering: optimizeSpeed;
 }
 
 #secureDrag {
@@ -196,6 +196,7 @@ a {
 	text-align: center;
 	fill: var(--color);
 	cursor: pointer;
+	min-width: 0;
 }
 
 #delete_vortex {
